ensure sandwich properly aligns to the right

--- a/src/components/NavBar/Sandwich/Sandwich.module.css
+++ b/src/components/NavBar/Sandwich/Sandwich.module.css
@@ -1,4 +1,4 @@
 #sandwich {
   cursor: pointer;
-  margin: auto 7px;
+  margin: auto 0px;
 }
